--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-    "name": "armanbot",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www"
-    },
-    "dependencies": {
-        "body-parser": "~1.15.1",
-        "cookie-parser": "~1.4.3",
-        "debug": "~2.2.0",
-        "ejs": "^2.5.1",
-        "es6-promise": "^3.2.1",
-        "express": "~4.13.4",
-        "jade": "~1.11.0",
-        "morgan": "~1.7.0",
-        "serve-favicon": "~2.3.0",
-        "mongoose": "~3.8.15",
-        "natural": "^0.4.0",
-        "request": "^2.74.0"
-    }
+  "name": "armanbot",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.15.1",
+    "compression": "",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "ejs": "~1.0.0",
+    "es6-promise": "^3.2.1",
+    "express": "^4.13.4",
+    "express-session": "~1.7.6",
+    "fs": "0.0.2",
+    "jade": "~1.11.0",
+    "method-override": "",
+    "mongodb": "^2.2.5",
+    "mongoose": "~3.8.15",
+    "morgan": "",
+    "multer": "^1.1.0",
+    "natural": "^0.4.0",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
+    "request": "^2.74.0",
+    "serve-favicon": "~2.3.0"
+  }
 }
