--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
     "request": "^2.74.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
   }
 }
