--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.4",
     "express-session": "~1.7.6",
     "fs": "0.0.2",
+    "image-to-text": "^1.0.7",
     "jade": "~1.11.0",
     "method-override": "",
     "mongodb": "^2.2.5",
